--- a/package.json
+++ b/package.json
@@ -30,10 +30,13 @@
     "apexcharts": "^3.40.0",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.5",
+    "chart.js": "^4.4.3",
     "cv-parser-multiformats": "^1.1.5",
+    "date-fns": "^3.6.0",
     "jsonwebtoken": "^9.0.2",
     "ng-apexcharts": "^1.7.6",
     "ng-multiselect-dropdown": "^1.0.0",
+    "ng2-charts": "^6.0.1",
     "ngx-extended-pdf-viewer": "^20.0.0-alpha.3",
     "ngx-select-ex": "^8.0.1",
     "ngx-slick-carousel": "^17.0.0",
